<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginBottom="35dp"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/lightGray"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#7a8089"
                android:text="@string/please_enter_your_name"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_marginTop="20dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/lightGray"
                    android:textColorHint="#7a8089"
                    >
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="18sp">
            </Button>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>